--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babylonjs/core": "^5.39.0",
     "@babylonjs/inspector": "^5.39.0",
+    "@babylonjs/loaders": "^5.39.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
