--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "ammojs-typed": "^1.0.6",
+    "assert-browserify": "^2.0.0",
+    "browserify-fs": "^1.0.0",
+    "buffer-browserify": "^0.2.5",
     "cannon": "^0.6.2",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.9.4",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
